# CipherDen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  structure.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
cipherden/: exceptions.py
cipherden/backend/: app.py  models.py  server.py  session_store.py
cipherden/cli/: main.py
cipherden/vault/: crypto.py  db.py  generator.py  init.py  models.py  session.py  vault.py
docs/adr/: ADR-001-argon2id-key-derivation.md  ADR-002-aes-256-gcm-field-encryption.md  ADR-003-session-token-memory-only.md  ADR-004-manifest-v3-browser-extension.md
docs/superpowers/plans/: 2026-06-20-unlock-endpoint.md
docs/superpowers/specs/: 2026-06-20-unlock-endpoint-design.md
tests/integration/: test_backend_entries.py  test_backend_generate.py  test_backend_unlock.py  test_cli_add.py
tests/unit/: test_session_store.py
tests/unit/cli/: test_main.py
tests/unit/vault/: test_crypto.py  test_db.py  test_generator.py  test_init.py  test_session.py  test_vault.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx
web/src/api/: client.test.ts  client.ts
web/src/auth/: AuthContext.test.tsx  AuthContext.tsx  AuthProvider.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  authContext.ts  useAuth.ts
web/src/components/: AddEntryModal.test.tsx  AddEntryModal.tsx
web/src/hooks/: useDebouncedValue.test.ts  useGeneratePassword.test.ts  useGeneratePassword.ts
web/src/pages/: GeneratorPage.test.tsx  GeneratorPage.tsx  UnlockPage.test.tsx  UnlockPage.tsx
