[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipherden"
version = "0.1.0"
description = "A self-hosted, open-source password manager with a CLI, web UI, and browser extension."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14.5"

dependencies = [
    # Cryptography
    "cryptography>=43.0",
    "argon2-cffi>=23.1",

    # CLI
    "typer>=0.12",
    "rich>=13.7",

    # Backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",

    # Database
    "aiosqlite>=0.20",
]

[project.scripts]
cipherden = "cipherden.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",       # FastAPI TestClient
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cipherden*"]

# ===========================
# Ruff — linting + formatting
# ===========================
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "UP",  # pyupgrade
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===========================
# Pytest
# ===========================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]